// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeWrapper renders multiple placeholders 1`] = `
<code>
  process.env.MY_ENV = 
  <span
    className="css-1rhw0e5"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="example-org / example-project"
  >
    <svg
      className="css-1i93cgw"
      fill="none"
      height="12px"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <polyline
        points="19 12 12 19 5 12"
      />
    </svg>
    <span
      style={
        {
          "display": undefined,
        }
      }
    >
      <span
        className="css-1f5vc5"
        style={
          {
            "opacity": 1,
            "position": "relative",
            "transform": "none",
          }
        }
      >
        example-org
      </span>
    </span>
  </span>
   + 
  <span
    className="css-1rhw0e5"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="example-org / example-project"
  >
    <svg
      className="css-1i93cgw"
      fill="none"
      height="12px"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <polyline
        points="19 12 12 19 5 12"
      />
    </svg>
    <span
      style={
        {
          "display": undefined,
        }
      }
    >
      <span
        className="css-1f5vc5"
        style={
          {
            "opacity": 1,
            "position": "relative",
            "transform": "none",
          }
        }
      >
        example-project
      </span>
    </span>
  </span>
</code>
`;

exports[`CodeWrapper renders org auth token placeholder when not signed in 1`] = `
<code>
  process.env.MY_ENV = 
  sntrys_YOUR_TOKEN_HERE
</code>
`;

exports[`CodeWrapper renders org auth token placeholder when signed in 1`] = `
<code>
  process.env.MY_ENV = 
  <span
    className="css-1rhw0e5"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="Click to generate token"
  >
    <span
      style={
        {
          "display": undefined,
        }
      }
    >
      <span
        className="css-1f5vc5"
        style={
          {
            "opacity": 1,
            "position": "relative",
            "transform": "none",
          }
        }
      >
        Click to generate token
      </span>
    </span>
  </span>
</code>
`;

exports[`CodeWrapper renders with placeholder 1`] = `
<code>
  process.env.MY_ENV = 
  <span
    className="css-1rhw0e5"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="example-org / example-project"
  >
    <svg
      className="css-1i93cgw"
      fill="none"
      height="12px"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <polyline
        points="19 12 12 19 5 12"
      />
    </svg>
    <span
      style={
        {
          "display": undefined,
        }
      }
    >
      <span
        className="css-1f5vc5"
        style={
          {
            "opacity": 1,
            "position": "relative",
            "transform": "none",
          }
        }
      >
        example-org
      </span>
    </span>
  </span>
</code>
`;

exports[`CodeWrapper renders with placeholder in middle of text 1`] = `
<code>
  process.env.MY_ENV = https://
  <span
    className="css-1rhw0e5"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    title="example-org / example-project"
  >
    <svg
      className="css-1i93cgw"
      fill="none"
      height="12px"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <polyline
        points="19 12 12 19 5 12"
      />
    </svg>
    <span
      style={
        {
          "display": undefined,
        }
      }
    >
      <span
        className="css-1f5vc5"
        style={
          {
            "opacity": 1,
            "position": "relative",
            "transform": "none",
          }
        }
      >
        example-org
      </span>
    </span>
  </span>
  .sentry.io
</code>
`;

exports[`CodeWrapper renders without placeholder 1`] = `
<code>
  process.env.MY_ENV = 'foo'
</code>
`;
